--- a/styles.css
+++ b/styles.css
@@ -40,23 +40,24 @@ body {
   background-color: #011f3f;
 }
 /* media-queries */
-@media (max-width: 975px) {
+@media (max-width: 1020px) {
   #title {
-    font-size: 2rem;
+    font-size: 4.3rem;
     line-height: 1.3;
   }
   .btn {
-    font-size: 1.3rem;
+    font-size: 2.5rem;
+    padding: 5px;
   }
   .game-grid {
-    width: 99%;
-    grid-template-rows: 28vw 28vw 28vw;
+    width: 95%;
+    grid-template-rows: 20vh 20vh 20vh;
   }
   .start-restart {
     padding-top: 10%;
   }
   .body {
-    padding: 15% 3%;
+    padding: 3% 0;
   }
 }
 /* animation-classes */
